# vectro

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG_v2.1.md  BACKLOG_v2.1.md.archived  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO_QUICK_START.md  KONJO_PROMPT.md  KONJO_QUALITY_FRAMEWORK.md  MANIFEST.in  MOJO_COMPLETE.md  MOJO_EXPANSION.md  MOJO_INTEGRATION.md  MOJO_MODULES.md  MOJO_PACKAGE_BUILD.md  MOJO_RELEASE_GUIDE.md  NEXT_SESSION_PROMPT.md  NEXT_STEPS.md  PAPER.md  PLAN.md  PYPI_DISTRIBUTION.md  README.md  RELEASE_v0.2.0.md  RELEASE_v1.0.0.md  RELEASE_v1.2.0.md  SECURITY.md  SIMPLE_MOJO_RELEASE.md  STARTUP.md  STATUS_FINAL.md  TESTING_COMPLETE.md  TEST_COVERAGE_REPORT.md  VECTRO_V3_PLAN.md  WARNINGS_FIXED.md  __init__.py  compare_backends.sh  (+19 more)
.claude/: settings.json
.claude/agents/: researcher.md
.claude/commands/: konjo.md
.claude/hooks/: on-stop.sh  post-edit.sh
.claude/rules/: benchmarking.md  git-workflow.md  python-conventions.md  rust-conventions.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.konjo/: deny.toml
Formula/: vectro.rb
api/: Dockerfile  README.md  __init__.py  app.py  main.py  requirements.txt  store.py  test_api.py  test_viz.py  viz.py
benchmarks/: __init__.py  benchmark_ann_comparison.py  benchmark_faiss_comparison.py  benchmark_python_fallback.py  benchmark_real_embeddings.py  benchmark_real_embeddings_v2.py  cross_platform_benchmark.py  platform_detection.py  reproduce_paper.sh  vectro_paper_benchmark.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
demo/: demo.py  index.html  server.py  viz.html
demos/: MULTI_DATASET_RECORDING_GUIDE.md  README.md  RECORDING_GUIDE.md  VIDEO_SCRIPT.md  animated_demo.py  animation_viewer.py  benchmark_all_datasets.py  benchmark_demo.mojo  benchmark_public_data.py  demo_animated.py  demo_comprehensive.py  demo_v2.py  demo_v2.tape  demo_v3.py  demo_v3.tape  download_public_dataset.py  gif_demo_v3.py  quick_demo.mojo  run_complete_demo.sh  video_demo_v3.py  visual_bench.py
docs/: MOJO_BENCHMARK_GUIDE.md  adr-001-javascript-bindings.md  adr-002-v4-architecture.md  api-reference.md  benchmark-methodology.md  benchmarking-guide.md  faiss_comparison_results.md  getting-started.md  how-it-works.md  integrations.md  migration-guide.md  migration.md
examples/: rag_quickstart.py  vector_search_quickstart.py
js/: README.md  binding.gyp  index.d.ts  index.js  package-lock.json  package.json
notebooks/: quickstart.ipynb  vectro_cross_platform_benchmark.ipynb  vectro_paper_results.ipynb  visualization_umap_streamlit.ipynb
python/: __init__.py  __init__.pyi  _cli.py  _mojo_bridge.py  _mojo_bridge.pyi  _rust_bridge.py  async_pipeline.py  auto_quantize_api.py  auto_quantize_api.pyi  batch_api.py  batch_api.pyi  bench.py  benchmark.py  benchmark.pyi  bf16_api.py  bf16_api.pyi  binary_api.py  binary_api.pyi  cli.py  cli.pyi  codebook_api.py  codebook_api.pyi  gpu_api.py  gpu_api.pyi  hnsw_api.py  hnsw_api.pyi  interface.py  interface.pyi  ivf_api.py  ivf_api.pyi  lora_api.py  lora_api.pyi  migration.py  migration.pyi  mojo_output_parser.py  mojo_runner.py  nf4_api.py  nf4_api.pyi  onnx_export.py  onnx_export.pyi  (+26 more)
results/: ann_comparison.json  benchmark_python_fallback.json  faiss_comparison.json  faiss_comparison_fixed.json  faiss_comparison_full.json  faiss_comparison_mojo.json  real_embeddings_benchmark.json  real_embeddings_v2_glove100.json
rust/generators/: Cargo.toml
rust/generators/src/: lib.rs
rust/vectro_cli/: Cargo.toml
rust/vectro_cli/src/: lib.rs  main.rs  pipeline.rs  server.rs
rust/vectro_cli/static/: index.html
rust/vectro_cli/tests/: integration_bench.rs  integration_cli.rs  integration_compress.rs  integration_main_helpers.rs  integration_quantize.rs  integration_server.rs
rust/vectro_lib/: Cargo.toml
rust/vectro_lib/benches/: int8_bench.rs  quant_bench.rs  simd_bench.rs
rust/vectro_lib/examples/: wave1_bench.rs
rust/vectro_lib/proptest-regressions/quant/: binary.txt  int8.txt  nf4.txt
rust/vectro_lib/src/: lib.rs  wasm.rs
rust/vectro_lib/src/index/: bm25.rs  hnsw.rs  ivf.rs  ivf_pq.rs  mod.rs  quant_hnsw.rs
rust/vectro_lib/src/quant/: bf16.rs  binary.rs  int8.rs  mod.rs  nf4.rs  pq.rs  rq.rs  sq2.rs  sq3.rs
rust/vectro_py/: Cargo.toml
rust/vectro_py/src/: lib.rs
scripts/: aggregate_paper_tables.py  benchmark_vs_faiss.py  build_wheels.sh  eval_profiles.py  run_mojo_benchmark.sh  start.sh  validate_paper_results.py  vectro_quantizer_stub.py
src/: __init__.py  auto_quantize_mojo.mojo  batch_processor.mojo  benchmark_mojo.mojo  binary_quantizer.mojo  codebook_mojo.mojo  compression_profiles.mojo  gpu_quantizer.mojo  hnsw_index.mojo  nf4_quantizer.mojo  quality_metrics.mojo  quantizer.mojo  quantizer.py  quantizer_cython.c  quantizer_cython.pyx  quantizer_new.mojo  quantizer_simd.mojo  quantizer_simple.mojo  quantizer_test.mojo  quantizer_working.mojo  simple_test.mojo  storage_mojo.mojo  streaming_quantizer.mojo  test.mojo  test_basic.mojo  test_tuple.mojo  vector_ops.mojo  vectro_api.mojo  vectro_standalone.mojo
tests/: _path_setup.py  conftest.py  coverage.mojo  run_all_tests.mojo  run_all_tests.py  run_all_tests_with_coverage.mojo  test_additional_modules.mojo  test_all_modules.mojo  test_arrow_bridge.py  test_async_compress.py  test_async_pipeline.py  test_auto_quantize.py  test_auto_quantize_profiles.py  test_batch_api.py  test_batch_processor.mojo  test_benchmark_suite.py  test_bf16.py  test_binary.py  test_chroma_connector.py  test_cli_info.py  test_codebook.py  test_complete_coverage.mojo  test_core_functionality.mojo  test_cross_platform_benchmarks.py  test_dspy_integration.py  test_embeddings_base.py  test_embeddings_providers.py  test_gpu.py  test_gpu_equivalence.py  test_haystack_async.py  test_haystack_integration.py  test_haystack_mmr.py  test_haystack_reranker.py  test_hnsw.py  test_hnsw_extended.py  test_hnsw_v2.py  test_hybrid_search.py  test_int8_normalized_and_f16.py  test_integration.py  test_integrations_api.py  (+48 more)
vectro/: __init__.py
(+110 files in other folders)
