[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vectro"
version = "4.0.0"
description = "Ultra-high-performance LLM embedding compressor — 100% Rust core with NEON SIMD, HNSW, INT8/NF4/Binary/PQ, zero Mojo/Cython toolchain required"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wesley Scholl", email = "wesley.scholl@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "embeddings",
    "quantization",
    "compression",
    "llm",
    "rust",
    "simd",
    "neon",
    "performance",
    "high-performance-computing",
    "vector-database",
    "rag",
    "hnsw",
    "ann",
    "int8",
    "nf4",
    "product-quantization",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
integrations = [
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
    "torch>=2.0",
    "transformers>=4.36",
    "pymilvus>=2.4",
    "chromadb>=0.4",
    "pinecone-client>=3.0",
]
data = [
    "pyarrow>=12.0",
]
cloud = [
    "fsspec>=2024.2",
    "zstandard>=0.20",
]
learned = [
    "scikit-learn>=1.3",
]
bench = [
    "rich>=13.0",
    "tqdm>=4.0",
]
bench-ann = [
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "usearch>=2.9.0",
    "requests>=2.31",
    "tqdm>=4.0",
]
mojo = [
    # Mojo SDK is required for building from source with Mojo backend
    # Install from: https://www.modular.com/mojo
]
onnx = [
    "onnx>=1.14",
]
gpu = [
    "torch>=2.0",
]
inference = [
    "onnxruntime>=1.17",
]
all = [
    "scikit-learn>=1.3",
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
    "pymilvus>=2.4",
    "chromadb>=0.4",
    "pinecone-client>=3.0",
    "torch>=2.0",
    "transformers>=4.36",
    "fsspec>=2024.2",
    "zstandard>=0.20",
    "pyarrow>=12.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "onnx>=1.14",
    "onnxruntime>=1.17",
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "usearch>=2.9.0",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/wesleyscholl/vectro"
Documentation = "https://github.com/wesleyscholl/vectro#readme"
Repository = "https://github.com/wesleyscholl/vectro"
Issues = "https://github.com/wesleyscholl/vectro/issues"

[project.scripts]
vectro = "vectro_py._cli:main"

[tool.maturin]
# The Rust crate that contains the PyO3 extension module.
manifest-path = "rust/vectro_py/Cargo.toml"
# Python source tree (non-extension modules live here).
python-source = "python"
# Include the compiled vectro_cli binary inside the wheel so `vectro` CLI
# works without a separate Rust installation.
# The scripts entry-point above wraps this binary via _cli.py.
features = ["pyo3/extension-module"]
strip = true

[tool.maturin.target.aarch64-apple-darwin]
# Enable NEON on Apple Silicon (NEON is mandated by AArch64, so this is just
# an explicit annotation for documentation purposes; Rust enables it by default).
rustflags = ["-C", "target-cpu=native"]

[tool.maturin.target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=x86-64-v3"]