[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=0.29", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "vectro"
version = "5.5.0"
description = "Mojo + Rust ultra-high-performance LLM embedding compressor with vector DB integrations, IVF/PQ/RQ/NF4/Binary quantization, JS bindings, cloud I/O, and a CLI — v5.5.0: quantization audit, QuantizationAuditor, QuantizationReport, VectorPairMetrics, RecallResult"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wesley Scholl", email = "wesley.scholl@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Other",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU",
]
keywords = [
    "embeddings",
    "quantization", 
    "compression",
    "llm",
    "mojo",
    "performance",
    "high-performance-computing",
    "vector-database",
    "rag",
    "simd",
    "optimization",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "cython>=0.29",
    "click>=8.0",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-benchmark",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "onnx>=1.14",
    "onnxruntime>=1.17",
]
integrations = [
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
    "torch>=2.0",
    "transformers>=4.36",
    "pymilvus>=2.4",
    "chromadb>=0.4",
    "pinecone-client>=3.0",
]
data = [
    "pyarrow>=12.0",
]
cloud = [
    "fsspec>=2024.2",
    "zstandard>=0.20",
]
learned = [
    "scikit-learn>=1.3",
]
bench = [
    "rich>=13.0",
    "tqdm>=4.0",
]
bench-ann = [
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "usearch>=2.9.0",
    "faiss-cpu>=1.7.4",
    "h5py>=3.9",
    "requests>=2.31",
    "tqdm>=4.0",
]
mojo = [
    # Mojo SDK is required for building from source with Mojo backend
    # Install from: https://www.modular.com/mojo
]
onnx = [
    "onnx>=1.14",
]
gpu = [
    "torch>=2.0",
]
inference = [
    "onnxruntime>=1.17",
]
all = [
    "scikit-learn>=1.3",
    "qdrant-client>=1.9",
    "weaviate-client>=4.0",
    "pymilvus>=2.4",
    "chromadb>=0.4",
    "pinecone-client>=3.0",
    "torch>=2.0",
    "transformers>=4.36",
    "fsspec>=2024.2",
    "zstandard>=0.20",
    "pyarrow>=12.0",
    "rich>=13.0",
    "tqdm>=4.0",
    "onnx>=1.14",
    "onnxruntime>=1.17",
    "hnswlib>=0.8.0",
    "annoy>=1.17.3",
    "usearch>=2.9.0",
    "faiss-cpu>=1.7.4",
    "h5py>=3.9",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/wesleyscholl/vectro"
Documentation = "https://github.com/wesleyscholl/vectro#readme"
Repository = "https://github.com/wesleyscholl/vectro"
Issues = "https://github.com/wesleyscholl/vectro/issues"

[project.scripts]
vectro = "python.cli:main"

[tool.setuptools]
packages = ["python"]
package-dir = {"python" = "python"}

[tool.setuptools.package-data]
python = ["*.pyx", "vectro_quantizer"]
"*" = ["src/*.mojo"]

[tool.cython]
language_level = 3

# ─────────────────────── cibuildwheel (PLAN 2) ────────────────────────────
# `pip install cibuildwheel && cibuildwheel --output-dir wheelhouse`
# Builds CPython 3.10/3.11/3.12 wheels for the seven supported targets:
#   macOS arm64, macOS x86_64, Linux x86_64, Linux aarch64, Windows x86_64.
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux_*"
test-command = "python {project}/benchmarks/vectro_paper_benchmark.py --quick --table int8"
test-requires = ["faiss-cpu", "hnswlib", "numpy", "psutil"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
archs = ["x86_64", "aarch64"]
environment = { RUSTFLAGS = "-C target-cpu=x86-64-v3" }

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "rustup target add x86_64-pc-windows-msvc"
