[package]
name = "generators"
version = "6.0.0"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
edition = "2021"
description = "Embedding data generators for Vectro development and benchmarking"
license = "MIT"

[[bin]]
name = "generate_embeddings"
path = "src/bin/generate_embeddings.rs"

[[bin]]
name = "generate_themed_embeddings"
path = "src/bin/generate_themed_embeddings.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
