[package]
name = "vectro_cli"
version = "6.0.0"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
edition = "2021"
description = "CLI, web server, and REST API for Vectro vector compression and search"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
vectro_lib = { path = "../vectro_lib" }
anyhow = "1.0"
serde_json = "1.0"
csv = "1.2"
indicatif = "0.17"
bincode = "1.3"
crossbeam-channel = "0.5"
num_cpus = "1.17"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"

[dev-dependencies]
tempfile = "3.6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
