[package]
name = "vectro_lib"
version = "4.0.0"
edition = "2021"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
description = "Core Rust library for high-performance vector quantization and search"
license = "MIT"

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"
nalgebra = "0.32"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.6"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "quant_bench"
harness = false

[[bench]]
name = "int8_bench"
harness = false

[[bench]]
name = "simd_bench"
harness = false
