[package]
name = "vectro_py"
version = "7.4.0"
edition = "2021"
authors = ["Wesley Scholl <128409641+wesleyscholl@users.noreply.github.com>"]
description = "Python bindings for Vectro high-performance vector compression and search"
license = "MIT"

[dependencies]
vectro_lib = { path = "../vectro_lib" }
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"
ndarray = "0.15"

[lib]
name = "vectro_py"
crate-type = ["cdylib"]
